[package]
name = "check-dup-prop-transpiler-swc-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "13.2.*", features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_ecma_parser = "8.0.1"

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
