[package]
name = "cube-cli"
# Placeholder — the real version is the Cube monorepo version, read from the
# repo-root lerna.json by build.rs at build time (CUBE_CLI_VERSION). This
# field is only the fallback for builds outside the monorepo.
version = "0.0.0"
edition = "2021"
build = "build.rs"
description = "Cube Cloud command line interface"
license = "Apache-2.0"
repository = "https://github.com/cube-js/cube"
homepage = "https://cube.dev"

[[bin]]
name = "cube"
path = "src/main.rs"

# Standalone workspace: this crate is released on its own cadence and
# intentionally does not join the rust/cube workspace.
[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
inquire = "0.7"
owo-colors = "4"
# Native root store (honors SSL_CERT_FILE and OS-installed CAs, e.g. behind
# corporate TLS-inspecting proxies) with rustls — still no OpenSSL, still
# fully static on musl.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "multipart"] }
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
etcetera = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
serde_json = "1"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
