[package]
name = "cubeclient"
version = "0.28.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "Client for Cube.js"
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
reqwest-middleware = "0.1.0"
anyhow = "1.0"
truelayer-extensions = "0.1"
async-trait = "0.1.51"
tokio = { version = "1.6", features = ["time"] }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "rustls-tls"]

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros"] }
log = "=0.4.11"
