[package]
name = "cubehll"
version = "0.1.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "HyperLogLog implementation ported from AirLift"

[dev-dependencies]
twox-hash = "1.6.0"
hex = "0.4.2"

[dependencies]
byteorder = "1.4.2"
itertools = "0.10.0"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.56"
