[package]
name = "cubenativeutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubesql = { path = "../cubesql/cubesql" }
tokio = { version = "1", features = ["full", "rt"] }
async-channel = { version = "2" }
async-trait = "0.1.36"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.56"
log = "0.4.21"
simple_logger = "1.7.0"
uuid = { version = "0.8", features = ["v4"] }
once_cell = "1.10"
libc = "0.2"
findshlibs = "0.10.2"
convert_case = "0.6.0"
minijinja = { version = "1", features = ["json", "loader"] }
log-reroute = "0.1"
futures = "0.3.23"
# python
pyo3 = { version = "0.20.0", features = [], optional = true }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime", "attributes"], optional = true }

[dependencies.neon]
version = "=1"
default-features = false
features = ["napi-1", "napi-4", "napi-6", "futures"]
