[package]
name = "cubenativeutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubesql = { path = "../cubesql/cubesql" }
tokio = { version = "1", features = ["full", "rt"] }
async-channel = { version = "2" }
async-trait = "0.1.36"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.56"
log = "0.4.21"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
regex = "1.3.9"
convert_case = "0.6.0"

[dependencies.neon]
version = "=1"
default-features = false
features = ["napi-1", "napi-4", "napi-6", "futures"]
