[package]
name = "cubenativeutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubesql = { path = "../cubesql/cubesql" }
tokio = { version = "1", features = ["full", "rt"] }
async-channel = { version = "2" }
async-trait = "0.1.36"
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.56"
log = "0.4.21"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
regex = "1.3.9"
convert_case = "0.6.0"

[dependencies.neon]
version = "=1"
default-features = false
features = ["napi-1", "napi-4", "napi-6", "futures"]

# Code in cubenativeutils crate is not ready for full-blown clippy
# So we disable some rules to enable per-rule latch in CI, not for a whole clippy run
# Feel free to remove any rule from here and fix all warnings with it
# Or to write a comment why rule should stay disabled
[lints.clippy]
clone_on_copy = "allow"
len_without_is_empty = "allow"
module_inception = "allow"
multiple_bound_locations = "allow"
result_large_err = "allow"
unnecessary_cast = "allow"
useless_format = "allow"
