[package]
name = "cubeorchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
cubeshared = { path = "../cubeshared" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0"

[dependencies.neon]
version = "=1"
default-features = false
features = ["napi-1", "napi-4", "napi-6", "futures"]
