[package]
name = "cuberpc"
version = "0.1.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "RPC"

[lib]
proc-macro = true

[dependencies]
byteorder = "1.4.2"
itertools = "0.10.0"
Inflector = "0.11.4"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dependencies.async-trait]
version = "0.1.42"