[package]
name = "cubesql"
version = "0.28.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "Cube.js SQL proxy over MySQL protocol"
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"

[dependencies]
cubeclient = { path = "../cubeclient" }
sqlparser = { git = 'https://github.com/cube-js/sqlparser-rs.git', rev = "c37e5cd5300ed3bf1487be7a017cd65b6ed1a5ff" }
lazy_static = "1.4.0"
base64 = "0.13.0"
tokio = { version = "1.0", features = ["full", "rt"] }
serde_derive = "1.0.115"
serde = "1.0.115"
serde_bytes = "0.11.5"
csv = "1.1.3"
bytes = "0.5.4"
serde_json = "1.0.56"
futures = "0.3.5"
smallvec = "1.4.0"
byteorder = "1.3.4"
log = "=0.4.11"
simple_logger = "1.7.0"
async-trait = "0.1.36"
regex = "1.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
num = "0.3.0"
enum_primitive = "0.1.1"
msql-srv = { git = 'https://github.com/cube-js/msql-srv', version = '0.9.2' }
bincode = "1.3.1"
chrono = "0.4.15"
mockall = "0.8.1"
reqwest = { version = "0.11.0", features = ["json", "rustls-tls"], default-features = false }
nanoid = "0.3.0"
tokio-util = { version = "0.6.2", features=["compat"] }
futures-timer = "3.0.2"
paste = "1.0.4"
mysql_common = "0.26.0"
tracing = "0.1.25"
tracing-futures = { version = "0.2.5", features = ["tokio", "tokio-executor"] }
lru = "0.6.5"