[package]
name = "cubesql"
version = "0.28.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "Cube.js SQL proxy over MySQL protocol"
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"

[dependencies]
datafusion = { git = 'https://github.com/cube-js/arrow-datafusion.git', rev = "c87846455245807627ea3109f886fa931a8b3212", default-features = false, features = ["unicode_expressions"] }
anyhow = "1.0"
thiserror = "1.0"
cubeclient = { path = "../cubeclient" }
sqlparser = { git = 'https://github.com/cube-js/sqlparser-rs.git', rev = "1d117f501b5a970cea0f2c25ee1b87283399e1f3" }
lazy_static = "1.4.0"
base64 = "0.13.0"
tokio = { version = "1.0", features = ["full", "rt"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
bytes = "0.5.4"
futures = "0.3.5"
rand = "0.8.3"
smallvec = "1.7.0"
byteorder = "1.3.4"
log = "=0.4.11"
simple_logger = "1.7.0"
async-trait = "0.1.36"
regex = "1.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
msql-srv = { git = 'https://github.com/cube-js/msql-srv', rev = '8fb94f10864e5632b22152d0c2e9da2da81f6cb5' }
bincode = "1.3.1"
chrono = "0.4.15"
mockall = "0.8.1"
reqwest = { version = "0.11.0", features = ["json", "rustls-tls"], default-features = false }
nanoid = "0.3.0"
tokio-util = { version = "0.6.2", features=["compat"] }
mysql_common = "0.26.0"

[dev-dependencies]
pretty_assertions = "1.0.0"