[package]
name = "cubestore-sql-tests"
version = "0.1.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "Tests for CubeStore that can run in multiple configurations."
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"
repository = "https://github.com/cube-js/cube.js"

[lib]
test = false

[[test]]
name = "in-process"
path = "tests/in_process.rs"
harness = false

[dependencies]
async-compression = { version = "0.3.7", features = ["gzip", "tokio"] }
cubestore = { path = "../cubestore" }
futures = "0.3.5"
itertools = "0.9.0"
pretty_assertions = "0.7.1"
tokio = { version = "1.0", features = ["full", "rt"] }
