[package]
name = "cubestore"
version = "0.1.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "Cube.js pre-aggregation storage layer"
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"
repository = "https://github.com/cube-js/cube.js"

[target.'cfg(not(target_os = "windows"))'.dependencies]
ipc-channel = { version = "0.14.1" }
libc = { version = "0.2.97", optional = true }

[dependencies]
base64 = "0.13.0"
bumpalo = "3.6.1"
tokio = { version = "1.0", features = ["full", "rt"] }
warp = { git = 'https://github.com/seanmonstar/warp', version = "0.3.0" }
sqlparser = { git = 'https://github.com/cube-js/sqlparser-rs.git', rev = "c3c77dd2aa408a7cb0c9f27e5e9fc1b101351dcd" }
serde_derive = "1.0.115"
serde = "1.0.115"
serde_bytes = "0.11.5"
cubehll = { path = "../cubehll" }
cubezetasketch = { path = "../cubezetasketch" }
cuberpc = { path = "../cuberpc" }
parquet = { git = "https://github.com/cube-js/arrow-rs", branch = "cube", features = ["arrow"] }
arrow = { git = "https://github.com/cube-js/arrow-rs", branch = "cube" }
arrow-flight = { git = "https://github.com/cube-js/arrow-rs", branch = "cube" }
datafusion = { git = "https://github.com/cube-js/arrow-datafusion", branch = "cube" }
csv = "1.1.3"
bytes = "0.5.4"
serde_json = "1.0.56"
futures = "0.3.5"
smallvec = "1.4.0"
flexbuffers = "0.1.1"
byteorder = "1.3.4"
log = "=0.4.11"
simple_logger = "1.7.0"
async-trait = "0.1.36"
actix-rt = "1.1.1"
regex = "1.3.9"
rocksdb = { version = "0.16.0", default-features = false, features = ["bzip2"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
num = "0.3.0"
enum_primitive = "0.1.1"
msql-srv = { git = 'https://github.com/cube-js/msql-srv', version = '0.9.2' }
bincode = "1.3.1"
chrono = "0.4.15"
lazy_static = "1.4.0"
mockall = "0.8.1"
async-std = "0.99"
itertools = "0.9.0"
bigdecimal = { version = "0.2.0", features = ["serde"] }
rust-s3 = "0.26.3"
aws-creds = "0.24.1"
aws-region = "0.22.1"
deadqueue = "0.1.0"
reqwest = { version = "0.11.0", features = ["json", "rustls-tls"], default-features = false }
nanoid = "0.3.0"
rand = "0.8.0"
parquet-format = "=2.6.1"
hex = "0.4.2"
cloud-storage = "0.7.0"
tokio-util = { version = "0.6.2", features=["compat"] }
futures-timer = "3.0.2"
tokio-stream = { version = "0.1.2", features=["io-util"] }
scopeguard = "1.1.0"
async-compression = { version = "0.3.7", features = ["gzip", "tokio"] }
tempfile = "3.2.0"
tarpc = { version = "0.24", features = ["tokio1"] }
pin-project-lite = "0.2.4"
paste = "1.0.4"
mysql_common = "0.26.0"
flatbuffers = "0.7.0"
http-auth-basic = "0.1.2"
tracing = "0.1.25"
tracing-futures = { version = "0.2.5", features = ["tokio", "tokio-executor"] }
lru = "0.6.5"
ctor = "0.1.20"

[dev-dependencies]
pretty_assertions = "0.7.1"

[features]
# When enabled, child processes will die whenever parent process exits.
# Highly recomended for production, available only on Linux with prctl system call.
process-cleanup = ["libc"]
