[package]
name = "cubetranspilers"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.7.1"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
swc_core = { version = "13.3.*", features = ["ecma_plugin_transform"] }
swc_ecma_parser = "8.0.1"
swc_ecma_codegen = "6.1.0"
anyhow = "1.0.95"
