[package]
name = "cubeclient"
version = "0.1.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "Client for Cube.js"
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "^1.0"
url = "^2.2"
reqwest-middleware = { version = "0.3.2", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1.51"
tokio = { version = "1.6", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
serde_repr = "0.1.20"

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "multipart", "rustls-tls"]

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros"] }
log = "0.4.21"
