[package]
name = "pg-srv"
version = "0.2.0"
authors = ["Cube Dev, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "Library for emulating a PostgreSQL server"
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"

[features]
with-chrono = ["chrono"]
default = ["with-chrono"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.36"
log = "0.4"
bytes = "1.2"
byteorder = "1.4"
thiserror = "2"
chrono = { version = "0.4", package = "chrono", default-features = false, features = [
    "clock",
], optional = true }
chrono-tz = "0.8"

[dev-dependencies]
hex = "0.4.3"

# Code in cubesql workspace is not ready for full-blown clippy
# So we disable some rules to enable per-rule latch in CI, not for a whole clippy run
# Feel free to remove any rule from here and fix all warnings with it
# Or to write a comment why rule should stay disabled
[lints.clippy]
len_without_is_empty = "allow"
new_without_default = "allow"
