[package]
name = "cuberockstore"
version = "0.1.0"
authors = ["Cube Dev, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "Cube Rocks Store"

[dependencies]

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
# jemalloc is supported only for gnu linux
# TODO: Fix issue with cross building for linux musl & jemalloc
rocksdb = { git = "https://github.com/cube-js/rust-rocksdb", branch = "cubestore", default-features = false, features = ["zstd", "snappy", "jemalloc"] }

[target.'cfg(all(target_os = "linux", not(target_env = "gnu")))'.dependencies]
rocksdb = { git = "https://github.com/cube-js/rust-rocksdb", branch = "cubestore", default-features = false, features = ["zstd", "snappy"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rocksdb = { git = "https://github.com/cube-js/rust-rocksdb", branch = "cubestore", default-features = false, features = ["zstd", "snappy"] }
